# stock-analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  run_collector.py  sample_output_AAPL.txt  sample_output_MSFT.txt
.streamlit/: config.toml
docs/: bugs.md  design.md  future-enhancements.md  handoff-build.md  handoff-design.md  handoff-implementation-plan.md  handoff-requirements.md  implementation-plan.md  prd.md
docs/superpowers/specs/: 2026-03-14-prd-design.md
src/: config.py  models.py
src/agents/: base.py  data_collector.py  financial_analyst.py  orchestrator.py  thesis_builder.py
src/data_sources/: fred.py  sec_edgar.py  yahoo_finance.py
src/experiment/: batch_runner.py  db.py  report.py  screener.py  tracker.py
src/ui/: charts.py  components.py
tests/: conftest.py  test_base_agent.py  test_charts.py  test_components.py  test_data_collector.py  test_experiment_batch_runner.py  test_experiment_db.py  test_experiment_report.py  test_experiment_screener.py  test_experiment_tracker.py  test_financial_analyst.py  test_fred.py  test_models.py  test_orchestrator.py  test_sec_edgar.py  test_thesis_builder.py  test_yahoo_finance.py
