[project]
name = "stock-analyst"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "streamlit>=1.40.0",
    "yfinance>=0.2.40,<0.3.0",
    "fredapi>=0.5.2",
    "plotly>=5.24.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
